src/Celarix.Cix/Celarix.Cix/Parse/ANTLR/CixParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\Documents\GitHub\Cix\antlrTest\Cix.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

namespace Celarix.Cix.Compiler.Parse.AST
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
    [System.CLSCompliant(false)]
    public partial class CixParser : Antlr4.Runtime.Parser
    {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();

        public const int
            T__0 = 1,
            T__1 = 2,
            T__2 = 3,
            T__3 = 4,
            T__4 = 5,
            T__5 = 6,
            T__6 = 7,
            Whitespace = 8,
            Break = 9,
            Case = 10,
            Continue = 11,
            Default = 12,
            Do = 13,
            Double = 14,
            Else = 15,
            Float = 16,
            Global = 17,
            For = 18,
            If = 19,
            Int = 20,
            Long = 21,
            Return = 22,
            Short = 23,
            Sizeof = 24,
            Struct = 25,
            Void = 26,
            While = 27,
            LeftParen = 28,
            RightParen = 29,
            LeftBracket = 30,
            RightBracket = 31,
            OpenScope = 32,
            CloseScope = 33,
            LessThan = 34,
            LessThanOrEqualTo = 35,
            GreaterThan = 36,
            GreaterThanOrEqualTo = 37,
            ShiftLeft = 38,
            ShiftRight = 39,
            Plus = 40,
            Increment = 41,
            Minus = 42,
            Decrement = 43,
            Asterisk = 44,
            Divide = 45,
            Modulus = 46,
            Ampersand = 47,
            BitwiseOr = 48,
            LogicalAnd = 49,
            LogicalOr = 50,
            BitwiseXor = 51,
            LogicalNot = 52,
            BitwiseNot = 53,
            Question = 54,
            Colon = 55,
            Semicolon = 56,
            Comma = 57,
            Assign = 58,
            MultiplyAssign = 59,
            DivideAssign = 60,
            ModulusAssign = 61,
            AddAssign = 62,
            SubtractAssign = 63,
            ShiftLeftAssign = 64,
            ShiftRightAssign = 65,
            BitwiseAndAssign = 66,
            BitwiseXorAssign = 67,
            BitwiseOrAssign = 68,
            Equals = 69,
            NotEquals = 70,
            PointerMemberAccess = 71,
            DirectMemberAccess = 72,
            Integer = 73,
            FloatingPoint = 74,
            Digit = 75,
            StringLiteral = 76,
            Identifier = 77,
            IdentifierFirstChar = 78,
            IdentifierChar = 79,
            HexDigit = 80;

        public const int
            RULE_primaryExpression = 0,
            RULE_postfixExpression = 1,
            RULE_argumentExpressionList = 2,
            RULE_unaryExpression = 3,
            RULE_unaryOperator = 4,
            RULE_castExpression = 5,
            RULE_multiplicativeExpression = 6,
            RULE_additiveExpression = 7,
            RULE_shiftExpression = 8,
            RULE_relationalExpression = 9,
            RULE_equalityExpression = 10,
            RULE_andExpression = 11,
            RULE_exclusiveOrExpression = 12,
            RULE_inclusiveOrExpression = 13,
            RULE_logicalAndExpression = 14,
            RULE_logicalOrExpression = 15,
            RULE_conditionalExpression = 16,
            RULE_assignmentExpression = 17,
            RULE_assignmentOperator = 18,
            RULE_expression = 19,
            RULE_constantExpression = 20,
            RULE_typeName = 21,
            RULE_funcptrTypeName = 22,
            RULE_typeNameList = 23,
            RULE_primitiveType = 24,
            RULE_pointerAsteriskList = 25,
            RULE_variableDeclarationStatement = 26,
            RULE_variableDeclarationWithInitializationStatement = 27,
            RULE_struct = 28,
            RULE_structMember = 29,
            RULE_structArraySize = 30,
            RULE_globalVariableDeclaration = 31,
            RULE_function = 32,
            RULE_functionParameterList = 33,
            RULE_functionParameter = 34,
            RULE_statement = 35,
            RULE_block = 36,
            RULE_breakStatement = 37,
            RULE_conditionalStatement = 38,
            RULE_continueStatement = 39,
            RULE_elseStatement = 40,
            RULE_doWhileStatement = 41,
            RULE_expressionStatement = 42,
            RULE_forStatement = 43,
            RULE_returnStatement = 44,
            RULE_switchStatement = 45,
            RULE_caseStatement = 46,
            RULE_literalCaseStatement = 47,
            RULE_defaultCaseStatement = 48,
            RULE_whileStatement = 49,
            RULE_number = 50,
            RULE_sourceFile = 51;

        public static readonly string[] ruleNames =
        {
            "primaryExpression", "postfixExpression", "argumentExpressionList", "unaryExpression", "unaryOperator",
            "castExpression", "multiplicativeExpression", "additiveExpression", "shiftExpression",
            "relationalExpression", "equalityExpression", "andExpression", "exclusiveOrExpression",
            "inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", "conditionalExpression",
            "assignmentExpression", "assignmentOperator", "expression", "constantExpression", "typeName",
            "funcptrTypeName", "typeNameList", "primitiveType", "pointerAsteriskList",
            "variableDeclarationStatement", "variableDeclarationWithInitializationStatement", "struct",
            "structMember", "structArraySize", "globalVariableDeclaration", "function", "functionParameterList",
            "functionParameter", "statement", "block", "breakStatement", "conditionalStatement",
            "continueStatement", "elseStatement", "doWhileStatement", "expressionStatement", "forStatement",
            "returnStatement", "switchStatement", "caseStatement", "literalCaseStatement", "defaultCaseStatement",
            "whileStatement", "number", "sourceFile"
        };

        private static readonly string[] _LiteralNames =
        {
            null, "'@funcptr<'", "'byte'", "'sbyte'", "'ushort'",
            "'uint'", "'ulong'", "'switch'", null, "'break'",
            "'case'", "'continue'", "'default'", "'do'", "'double'",
            "'else'", "'float'", "'global'", "'for'", "'if'",
            "'int'", "'long'", "'return'", "'short'", "'sizeof'",
            "'struct'", "'void'", "'while'", "'('", "')'",
            "'['", "']'", "'{'", "'}'", "'<'",
            "'<='", "'>'", "'>='", "'<<'", "'>>'",
            "'+'", "'++'", "'-'", "'--'", "'*'",
            "'/'", "'%'", "'&'", "'|'", "'&&'",
            "'||'", "'^'", "'!'", "'~'", "'?'",
            "':'", "';'", "','", "'='", "'*='",
            "'/='", "'%='", "'+='", "'-='", "'<<='",
            "'>>='", "'&='", "'^='", "'|='", "'=='",
            "'!='", "'->'", "'.'"
        };

        private static readonly string[] _SymbolicNames =
        {
            null, null, null, null, null,
            null, null, null, "Whitespace", "Break",
            "Case", "Continue", "Default", "Do", "Double",
            "Else", "Float", "Global", "For", "If",
            "Int", "Long", "Return", "Short", "Sizeof",
            "Struct", "Void", "While", "LeftParen", "RightParen",
            "LeftBracket", "RightBracket", "OpenScope", "CloseScope", "LessThan",
            "LessThanOrEqualTo", "GreaterThan", "GreaterThanOrEqualTo", "ShiftLeft", "ShiftRight",
            "Plus", "Increment", "Minus", "Decrement", "Asterisk",
            "Divide", "Modulus", "Ampersand", "BitwiseOr", "LogicalAnd",
            "LogicalOr", "BitwiseXor", "LogicalNot", "BitwiseNot", "Question",
            "Colon", "Semicolon", "Comma", "Assign", "MultiplyAssign",
            "DivideAssign", "ModulusAssign", "AddAssign", "SubtractAssign", "ShiftLeftAssign",
            "ShiftRightAssign", "BitwiseAndAssign", "BitwiseXorAssign", "BitwiseOrAssign", "Equals",
            "NotEquals", "PointerMemberAccess", "DirectMemberAccess", "Integer", "FloatingPoint",
            "Digit", "StringLiteral", "Identifier", "IdentifierFirstChar", "IdentifierChar",
            "HexDigit"
        };

        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary
        {
            get { return DefaultVocabulary; }
        }

        public override string GrammarFileName
        {
            get { return "Cix.g4"; }
        }

        public override string[] RuleNames
        {
            get { return ruleNames; }
        }

        public override string SerializedAtn
        {
            get { return new string(_serializedATN); }
        }

        static CixParser()
        {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];

            for (int i = 0; i < _ATN.NumberOfDecisions; i++)
            {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public CixParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public CixParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
            : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }

        public partial class PrimaryExpressionContext : ParserRuleContext
        {
            public ITerminalNode Identifier() { return GetToken(CixParser.Identifier, 0); }
            public ITerminalNode StringLiteral() { return GetToken(CixParser.StringLiteral, 0); }
            public NumberContext number() { return GetRuleContext<NumberContext>(0); }
            public ITerminalNode LeftParen() { return GetToken(CixParser.LeftParen, 0); }
            public ExpressionContext expression() { return GetRuleContext<ExpressionContext>(0); }
            public ITerminalNode RightParen() { return GetToken(CixParser.RightParen, 0); }

            public PrimaryExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex
            {
                get { return RULE_primaryExpression; }
            }

            public override void EnterRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.EnterPrimaryExpression(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.ExitPrimaryExpression(this);
            }
        }

        [RuleVersion(0)]
        public PrimaryExpressionContext primaryExpression()
        {
            PrimaryExpressionContext _localctx = new PrimaryExpressionContext(Context, State);
            EnterRule(_localctx, 0, RULE_primaryExpression);

            try
            {
                State = 111;
                ErrorHandler.Sync(this);

                switch (TokenStream.LA(1))
                {
                    case Identifier:
                        EnterOuterAlt(_localctx, 1);

                    {
                        State = 104;
                        Match(Identifier);
                    }

                        break;
                    case StringLiteral:
                        EnterOuterAlt(_localctx, 2);

                    {
                        State = 105;
                        Match(StringLiteral);
                    }

                        break;
                    case Integer:
                    case FloatingPoint:
                        EnterOuterAlt(_localctx, 3);

                    {
                        State = 106;
                        number();
                    }

                        break;
                    case LeftParen:
                        EnterOuterAlt(_localctx, 4);

                    {
                        State = 107;
                        Match(LeftParen);
                        State = 108;
                        expression();
                        State = 109;
                        Match(RightParen);
                    }

                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally { ExitRule(); }

            return _localctx;
        }

        public partial class PostfixExpressionContext : ParserRuleContext
        {
            public PrimaryExpressionContext primaryExpression() { return GetRuleContext<PrimaryExpressionContext>(0); }
            public PostfixExpressionContext postfixExpression() { return GetRuleContext<PostfixExpressionContext>(0); }
            public ITerminalNode LeftBracket() { return GetToken(CixParser.LeftBracket, 0); }
            public ExpressionContext expression() { return GetRuleContext<ExpressionContext>(0); }
            public ITerminalNode RightBracket() { return GetToken(CixParser.RightBracket, 0); }
            public ITerminalNode LeftParen() { return GetToken(CixParser.LeftParen, 0); }
            public ITerminalNode RightParen() { return GetToken(CixParser.RightParen, 0); }

            public ArgumentExpressionListContext argumentExpressionList()
            {
                return GetRuleContext<ArgumentExpressionListContext>(0);
            }

            public ITerminalNode DirectMemberAccess() { return GetToken(CixParser.DirectMemberAccess, 0); }
            public ITerminalNode Identifier() { return GetToken(CixParser.Identifier, 0); }
            public ITerminalNode PointerMemberAccess() { return GetToken(CixParser.PointerMemberAccess, 0); }
            public ITerminalNode Increment() { return GetToken(CixParser.Increment, 0); }
            public ITerminalNode Decrement() { return GetToken(CixParser.Decrement, 0); }

            public PostfixExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex
            {
                get { return RULE_postfixExpression; }
            }

            public override void EnterRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.EnterPostfixExpression(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.ExitPostfixExpression(this);
            }
        }

        [RuleVersion(0)]
        public PostfixExpressionContext postfixExpression() { return postfixExpression(0); }

        private PostfixExpressionContext postfixExpression(int _p)
        {
            ParserRuleContext _parentctx = Context;
            int _parentState = State;
            PostfixExpressionContext _localctx = new PostfixExpressionContext(Context, _parentState);
            PostfixExpressionContext _prevctx = _localctx;
            int _startState = 2;
            EnterRecursionRule(_localctx, 2, RULE_postfixExpression, _p);
            int _la;

            try
            {
                int _alt;
                EnterOuterAlt(_localctx, 1);

                {
                    {
                        State = 114;
                        primaryExpression();
                    }
                    Context.Stop = TokenStream.LT(-1);
                    State = 139;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 3, Context);

                    while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                    {
                        if (_alt == 1)
                        {
                            if (ParseListeners != null)
                                TriggerExitRuleEvent();
                            _prevctx = _localctx;

                            {
                                State = 137;
                                ErrorHandler.Sync(this);

                                switch (Interpreter.AdaptivePredict(TokenStream, 2, Context))
                                {
                                    case 1:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 116;

                                        if (!(Precpred(Context, 6)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 6)");
                                        State = 117;
                                        Match(LeftBracket);
                                        State = 118;
                                        expression();
                                        State = 119;
                                        Match(RightBracket);
                                    }

                                        break;
                                    case 2:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 121;

                                        if (!(Precpred(Context, 5)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 5)");
                                        State = 122;
                                        Match(LeftParen);
                                        State = 124;
                                        ErrorHandler.Sync(this);
                                        _la = TokenStream.LA(1);

                                        if (((((_la - 24)) & ~0x3f) == 0
                                            && ((1L << (_la - 24))
                                                & ((1L << (Sizeof - 24))
                                                    | (1L << (LeftParen - 24))
                                                    | (1L << (Plus - 24))
                                                    | (1L << (Increment - 24))
                                                    | (1L << (Minus - 24))
                                                    | (1L << (Decrement - 24))
                                                    | (1L << (Asterisk - 24))
                                                    | (1L << (Ampersand - 24))
                                                    | (1L << (LogicalNot - 24))
                                                    | (1L << (BitwiseNot - 24))
                                                    | (1L << (Integer - 24))
                                                    | (1L << (FloatingPoint - 24))
                                                    | (1L << (StringLiteral - 24))
                                                    | (1L << (Identifier - 24))))
                                            != 0))
                                        {
                                            {
                                                State = 123;
                                                argumentExpressionList(0);
                                            }
                                        }

                                        State = 126;
                                        Match(RightParen);
                                    }

                                        break;
                                    case 3:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 127;

                                        if (!(Precpred(Context, 4)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 4)");
                                        State = 128;
                                        Match(DirectMemberAccess);
                                        State = 129;
                                        Match(Identifier);
                                    }

                                        break;
                                    case 4:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 130;

                                        if (!(Precpred(Context, 3)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 3)");
                                        State = 131;
                                        Match(PointerMemberAccess);
                                        State = 132;
                                        Match(Identifier);
                                    }

                                        break;
                                    case 5:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 133;

                                        if (!(Precpred(Context, 2)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 2)");
                                        State = 134;
                                        Match(Increment);
                                    }

                                        break;
                                    case 6:
                                    {
                                        _localctx = new PostfixExpressionContext(_parentctx, _parentState);
                                        PushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
                                        State = 135;

                                        if (!(Precpred(Context, 1)))
                                            throw new FailedPredicateException(this, "Precpred(Context, 1)");
                                        State = 136;
                                        Match(Decrement);
                                    }

                                        break;
                                }
                            }
                        }

                        State = 141;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 3, Context);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally { UnrollRecursionContexts(_parentctx); }

            return _localctx;
        }

        public partial class ArgumentExpressionListContext : ParserRuleContext
        {
            public AssignmentExpressionContext assignmentExpression()
            {
                return GetRuleContext<AssignmentExpressionContext>(0);
            }

            public ArgumentExpressionListContext argumentExpressionList()
            {
                return GetRuleContext<ArgumentExpressionListContext>(0);
            }

            public ITerminalNode Comma() { return GetToken(CixParser.Comma, 0); }

            public ArgumentExpressionListContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex
            {
                get { return RULE_argumentExpressionList; }
            }

            public override void EnterRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.EnterArgumentExpressionList(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.ExitArgumentExpressionList(this);
            }
        }

        [RuleVersion(0)]
        public ArgumentExpressionListContext argumentExpressionList() { return argumentExpressionList(0); }

        private ArgumentExpressionListContext argumentExpressionList(int _p)
        {
            ParserRuleContext _parentctx = Context;
            int _parentState = State;
            ArgumentExpressionListContext _localctx = new ArgumentExpressionListContext(Context, _parentState);
            ArgumentExpressionListContext _prevctx = _localctx;
            int _startState = 4;
            EnterRecursionRule(_localctx, 4, RULE_argumentExpressionList, _p);

            try
            {
                int _alt;
                EnterOuterAlt(_localctx, 1);

                {
                    {
                        State = 143;
                        assignmentExpression();
                    }
                    Context.Stop = TokenStream.LT(-1);
                    State = 150;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 4, Context);

                    while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                    {
                        if (_alt == 1)
                        {
                            if (ParseListeners != null)
                                TriggerExitRuleEvent();
                            _prevctx = _localctx;

                            {
                                {
                                    _localctx = new ArgumentExpressionListContext(_parentctx, _parentState);
                                    PushNewRecursionContext(_localctx, _startState, RULE_argumentExpressionList);
                                    State = 145;

                                    if (!(Precpred(Context, 1)))
                                        throw new FailedPredicateException(this, "Precpred(Context, 1)");
                                    State = 146;
                                    Match(Comma);
                                    State = 147;
                                    assignmentExpression();
                                }
                            }
                        }

                        State = 152;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream, 4, Context);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally { UnrollRecursionContexts(_parentctx); }

            return _localctx;
        }

        public partial class UnaryExpressionContext : ParserRuleContext
        {
            public PostfixExpressionContext postfixExpression() { return GetRuleContext<PostfixExpressionContext>(0); }
            public ITerminalNode Increment() { return GetToken(CixParser.Increment, 0); }
            public UnaryExpressionContext unaryExpression() { return GetRuleContext<UnaryExpressionContext>(0); }
            public ITerminalNode Decrement() { return GetToken(CixParser.Decrement, 0); }
            public UnaryOperatorContext unaryOperator() { return GetRuleContext<UnaryOperatorContext>(0); }
            public CastExpressionContext castExpression() { return GetRuleContext<CastExpressionContext>(0); }
            public ITerminalNode Sizeof() { return GetToken(CixParser.Sizeof, 0); }
            public ITerminalNode LeftParen() { return GetToken(CixParser.LeftParen, 0); }
            public TypeNameContext typeName() { return GetRuleContext<TypeNameContext>(0); }
            public ITerminalNode RightParen() { return GetToken(CixParser.RightParen, 0); }

            public UnaryExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex
            {
                get { return RULE_unaryExpression; }
            }

            public override void EnterRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.EnterUnaryExpression(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                ICixListener typedListener = listener as ICixListener;
                if (typedListener != null) typedListener.ExitUnaryExpression(this);
            }
        }

        [RuleVersion(0)]
        public UnaryExpressionContext unaryExpression()
        {
            UnaryExpressionContext _localctx = new UnaryExpressionContext(Context, State);
            EnterRule(_localctx, 6, RULE_unaryExpression);

            try
            {
                State = 168;
                ErrorHandler.Sync(this);

                switch (Interpreter.AdaptivePredict(TokenStream, 5, Context))
                {
                    case 1:
                        EnterOuterAlt(_localctx, 1);

                    {
                        State = 153;
                        postfixExpression(0);
                    }

                        break;
                    case 2:
                        EnterOuterAlt(_localctx, 2);

                    {
                        State = 154;
                        Match(Increment);
                        State = 155;
                        unaryExpression();
                    }

                        break;
                    case 3:
                        EnterOuterAlt(_localctx, 3);

                    {
                        State = 156;
                        Match(Decrement);
                        State = 157;
                        unaryExpression();
                    }

                        break;
                    case 4:
                        EnterOuterAlt(_localctx, 4);

                    {
                        State = 158;
                        unaryOperator();
                        State = 159;
                        castExpression();
                    }

                        break;
                    case 5:
                        EnterOuterAlt(_localctx, 5);

                    {
                        State = 161;
                        Match(Sizeof);
                        State = 162;
                        unaryExpression();
                    }

                        break;
                    case 6:
                        EnterOuterAlt(_localctx, 6);

                    {
                        State = 163;
                        Match(Sizeof);
                        State = 164;
                        Match(LeftParen);
                        State = 165;
                        typeName();
                        State = 166;
                        Match(RightParen);
                    }

                        break;
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally { ExitRule(); }

            return _localctx;
        }
